--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.2.0"
   },
